Thumbnail displayed in header from static image file

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- security dependency -->
+		<!-- security dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
