--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 
 #for heroku deploy
-java.runtime.version=11
+java.runtime.version=11.0.8
+
+#set to 128KB, meaning total file size cannot exceed 128KB.
+spring.servlet.multipart.max-file-size=1200KB
