Adding Config for datasource to deploy to heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.show-sql= true
 
-#for heroku deploy
-java.runtime.version=11.0.8
+#server.port=${PORT:8080}
+server.port=8080
 
 #set to 128KB, meaning total file size cannot exceed 128KB.
-spring.servlet.multipart.max-file-size=1200KB
+#spring.servlet.multipart.max-file-size=1200KB
